2013-06-20  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/cl-loaddefs.el: Don't version-control any more.
	* emacs-lisp/cl-lib.el: Load cl-macs when cl-loaddefs is not
	yet available.
	* Makefile.in (AUTOGEN_VCS): Move cl-loaddefs.el...
	(AUTOGENEL): ... here.
	* emacs-lisp/cl-macs.el (cl--sublis): New function.
	(cl--defsubst-expand): Use it.

2013-06-20  Paul Eggert  <eggert@cs.ucla.edu>

	* subr.el (log10): Move here from C code, and declare as obsolete.
	All uses of (log10 X) replaced with (log X 10).

2013-06-20  Juanma Barranquero  <lekktu@gmail.com>

	* emacs-lisp/tabulated-list.el (tabulated-list-format): Fix typo.
	Declare with `defvar-local'.
	(tabulated-list-use-header-line, tabulated-list-entries)
	(tabulated-list-padding, tabulated-list-printer)
	(tabulated-list-sort-key): Declare with `defvar-local'.
	(tabulated-list-init-header, tabulated-list-print-fake-header):
	Use `setq-local'.

2013-06-20  Michael Albinus  <michael.albinus@gmx.de>

	* arc-mode.el (archive-mode): Add `archive-write-file' to
	`write-contents-functions' also for remote files.  (Bug#14652)

2013-06-20  Juanma Barranquero  <lekktu@gmail.com>

	* cus-edit.el (custom-commands): Fix typos.
	(custom-display): Fix tooltip text.
	(custom-magic-alist, custom-filter-face-spec, custom-group-members):
	Fix typos in docstrings.
	(custom--initialize-widget-variables, Custom-mode): Use `setq-local'.
	(custom-unlispify-menu-entry, custom-magic-value-create)
	(custom-add-see-also, custom-group-value-create): Use ?\s.
	(custom-guess-type, customize-apropos, editable-field)
	(custom-face-value-create): Use `string-match-p'.
	(custom-save-variables, custom-save-faces): Use `looking-at-p'.

	* custom.el (custom-load-symbol): Use `string-match-p'.

	* ansi-color.el: Convert to lexical binding.
	(ansi-colors): Fix URL.
	(ansi-color-context, ansi-color-context-region): Use defvar-local.
	(ansi-color-apply-sequence, ansi-color-map): Fix typos in docstrings.