@@ -1,3 +1,7 @@
+2013-06-20  Juanma Barranquero  <lekktu@gmail.com>
+
+	* term/x-win.el (emacs-session-filename): Use `locate-user-emacs-file'.
+
 2013-06-20  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* emacs-lisp/cl-loaddefs.el: Don't version-control any more.
